Changed .getFirst because it made compilation fail